--- a/templates/merchendise/all_merch.html
+++ b/templates/merchendise/all_merch.html
@@ -1,37 +1,32 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
+
 
 {% block content %}
-<main class="container-fluid">
-  <h1 class="text-center lifeline-font" style="margin-top: 70px;"><i>Merchendise</i></h1>
-  <div class="container d-flex align-items-center justify-content-center">
-    <div class="row">
-      {% for merch in all_merch %}
-      <div
-        class="col-lg-4 col-md-6 col-sm-12 mb-4 d-flex align-items-center justify-content-center"
-      >
-        <div class="card merch-card-text">
-          <a href="{% url 'merch_detail' merch.id %}">
-            <img
-              class="card-img-top img-fluid"
-              src="{{ merch.image.url }}"
-              alt="{{ merch.name }}"
-            />
-          </a>
-          <div class="card-body indigo-dye rounded-1">
-            <h5 class="card-title">{{ merch.name }}</h5>
-            <p class="card-text">Price: €{{ merch.price }}</p>
-            <p class="card-text">Category: {{ merch.category }}</p>
-
-            <small class="text-white rating"
-              ><i class="fas fa-star mr-1 star" style="color: gold"></i>
-              {{merch.rating }} / 5</small
-            >
-          </div>
+    <main class="container-fluid">
+        <h1 class="text-center lifeline-font" style="margin-top: 70px;">
+            <i>Merchandise</i>
+        </h1>
+        <div class="container">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2">
+                {% for merch in all_merch %}
+                    <div class="col mb-4">
+                        <a href="{% url 'merch_detail' merch.id %}">
+                            <img src="{{ merch.image.url }}" alt="{{ merch.name }}" class="img-fluid p-3"/>
+                        </a>
+                        <div class="card merch-card-text">
+                            <div class="card-body indigo-dye rounded-1">
+                                <h5 class="card-title">{{ merch.name }}</h5>
+                                <p class="card-text">Price: €{{ merch.price }}</p>
+                                <p class="card-text">Category: {{ merch.category }}</p>
+                                <small class="text-white rating">
+                                    <i class="fas fa-star mr-1 star" style="color: gold"></i>
+                                    {{ merch.rating }}/5
+                                </small>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
         </div>
-      </div>
-      {% endfor %}
-    </div>
-  </div>
-</main>
-
+    </main>
 {% endblock %}
