--- a/templates/musicapp/song_list.html
+++ b/templates/musicapp/song_list.html
@@ -5,7 +5,7 @@
 {% load static %}
 
 <main class="container">
-    <h1 class="text-center text text-white lifeline-font" style="margin-top: 70px;"><i>Anthology</i></h1>
+    <h1 class="text-center text text-white lifeline-font"><i>Anthology</i></h1>
     <div class="row">
         {% for song in songs %}
         <!-- Render Song Cards -->
