--- a/merchandise/templates/merchandise/merch_item.html
+++ b/merchandise/templates/merchandise/merch_item.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<main class="container-fluid d-flex align-items-center justify-content-center merch-main-height">
+<main class="container-fluid d-flex align-items-center justify-content-center mt-5">
     <div class="container merch-item-height d-flex align-items-center justify-content-center rounded-4">
         <div class="row">
             <!-- On Large Screens, Display Side by Side -->
