--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,7 @@
                             <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search">
                             <div class="input-group-append">
                                 <button class="form-control btn btn-black border border-black rounded-0" type="submit">
-                                    <span class="icon">
+                                    <span class="icon text-white">
                                         <i class="fas fa-search"></i>
                                     </span>
                                 </button>
@@ -73,7 +73,7 @@
                 <!-- Collapsible Nav Bar -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon bg-white"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
