--- a/static/styles/css/style.css
+++ b/static/styles/css/style.css
@@ -17,7 +17,7 @@
 /* Padding Pages */
 
 
-.nav-padding-merch-item{
+.nav-padding-merch-item {
     padding-top: 20px;
 }
 
@@ -28,7 +28,7 @@
     align-items: center;
 }
 /* page height */
-.distance-top-na-v{
+.distance-top-na-v {
     min-height: calc(100vh - 140px);
 }
 
@@ -48,8 +48,8 @@
     max-width: 400px; /* Set a maximum width for the form */
 }
 
-.signup-text{
-    color:white;
+.signup-text {
+    color: white;
 }
 
 /* Merchandis all */
@@ -111,10 +111,6 @@
 .border-black {
     border: 1px solid black !important;
 }
-
-
-
-
 
 
 /* Song/Music/List  */
@@ -329,11 +325,11 @@ audio {
 
 /* Shopping bag */
 
-.shopping-text{
+.shopping-text {
     color: white;
 }
 
-.shopping-text-hr{
+.shopping-text-hr {
     color: white;
     font-weight: 600;
     height: 5px;
@@ -344,7 +340,7 @@ audio {
 
 .btn-outline-black {
     background: white;
-    color: black !important;    /*  Override link colors */
+    color: black !important; /*  Override link colors */
     border: 1px solid black;
 }
 
@@ -355,7 +351,7 @@ audio {
     color: white;
 }
 .message-container {
-    
+
     position: fixed;
     top: 72px;
     right: 15px;
@@ -372,10 +368,10 @@ audio {
 
 /* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
 .arrow-up {
-    width: 0; 
-    height: 0; 
+    width: 0;
+    height: 0;
     border-left: 4px solid transparent;
-    border-right: 4px solid transparent; 
+    border-right: 4px solid transparent;
     border-bottom: 10px solid black;
     position: absolute;
     top: -10px;
@@ -422,8 +418,6 @@ audio {
 }
 
 
-
-
 /* Media Sizes */
 /* ------------------------------------- */
 
@@ -437,4 +431,59 @@ audio {
 
 
     }
+}
+
+
+/* Allauth form formatting */
+
+.allauth-form-inner-content p {
+    margin-top: 1.5rem; /* mt-4 */
+    color: #6c757d; /* text-secondary */
+}
+
+.allauth-form-inner-content input {
+    border-color: #000;
+    border-radius: 0;
+}
+
+.allauth-form-inner-content label:not([for='id_remember']) {
+    display: none;
+}
+
+.allauth-form-inner-content input::placeholder {
+    color: #aab7c4;
+}
+
+.allauth-form-inner-content button,
+.allauth-form-inner-content input[type='submit'] {
+    /* btn */
+    display: inline-block;
+    font-weight: 400;
+    color: #fff;
+    text-align: center;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: #000;
+    border: 1px solid #000;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0;
+
+    /* standard bootstrap btn transitions */
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.allauth-form-inner-content button:hover,
+.allauth-form-inner-content input[type='submit']:hover {
+    color: #fff;
+    background-color: #222;
+    border-color: #222;
+}
+
+.allauth-form-inner-content a {
+    color: #17a2b8; /* text-info */
 }
