--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,16 +1,15 @@
 {% extends "base.html" %}
 
-
 {% block content %}
-<div class="container d-flex align-content-center justify-content-start  h-100">
-   
-        <div class="row d-flex align-content-center justify-content-center h-75">
-            <div class="col-12 col-md-12 h-50 ">
-                <div class="allauth-form text-white h-100">
+    <div class="container header-container">
+        <div class="overlay"></div>
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <div class="allauth-form-inner-content">
                     {% block inner_content %}
                     {% endblock %}
                 </div>
             </div>
         </div>
- </div>
+    </div>
 {% endblock %}
