--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -1,23 +1,24 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
-{% load crispy_forms_tags %}
+
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
-{% block content %}
-<div class="signup-container">
-  <h1 class="signup-text">{% trans "Sign Up" %}</h1>
+{% block inner_content %}
+<hr>
+<h2 class="logo-font mb-4">{% trans "Sign Up" %}</h2>
+<hr>
 
-  <p class="signup-text">{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}" class="signup-text">sign in</a>.{% endblocktrans %}</p>
+<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
-  <form class="signup signup-form" id="signup_form" method="post" action="{% url 'account_signup' %}">
-    {% csrf_token %}
-    {{ form|crispy }}
-    {% if redirect_field_value %}
-      <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-    {% endif %}
-    <br>
-    <button type="submit" class="">{% trans "Sign Up" %} &raquo;</button>
-  </form>
-</div>
+<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+  {% csrf_token %}
+  {{ form|crispy }}
+  {% if redirect_field_value %}
+  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+  {% endif %}
+  <a class="btn btn-outline-black rounded-0" href="{% url 'account_login' %}">Back to Login</a>
+  <button type="submit">{% trans "Sign Up" %}</button>
+</form>
+
 {% endblock %}
