--- a/templates/base.html
+++ b/templates/base.html
@@ -45,8 +45,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-        <!-- Stripe -->
-        <script src="https://js.stripe.com/v3/"></script>
+    <!-- Stripe -->
+    <script src="https://js.stripe.com/v3/"></script>
     {% endblock %}
 
 
@@ -148,17 +148,15 @@
                         <li class="nav-item second-navbar-li">
                             <a class="nav-link" href="{% url 'all_merchandise' %}?category=cd">Anthology CD</a>
                         </li>
-                        {% if request.user.is_authenticated %}
-                        <li class="nav-item second-navbar-li">
-                            <a class="nav-link" href="#">Chat Room</a>
-                        </li>
-                        {% endif %}
 
                     </ul>
                 </div>
             </div>
         </nav>
-
+        {% load account %}
+        {% if request.user.is_authenticated %}
+        <h4 class="align-items-center text-white p-1">Welcome, {{ user }}!</h4>
+        {% endif %}
     </header>
     <!-- Messages alert area -->
     {% if messages %}
@@ -178,18 +176,7 @@
         {% endfor %}
     </div>
     {% endif %}
-    <!-- <div class="container border-5 msg-container" style="margin-top: 140px;">
-        <div class="row">
-            <div class="col-md-6 offset-md-2">
-                {% for message in messages %}
-                <div class="alert {{ message.tags }} alert-dismissible fade show" id="msg" role="alert">
-                    {{ message | safe }}
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-                {% endfor %}
-            </div>
-        </div>
-    </div> -->
+
 
     {% block page_header %}
     {% endblock %}
