--- a/merchandise/templates/merchandise/all_merch.html
+++ b/merchandise/templates/merchandise/all_merch.html
@@ -31,9 +31,11 @@
                                 <span class="text-white">{{ merch.rating }}/5 </span>
                             </small>
                             {% if request.user.is_superuser %}
-                            <small class="ml-3">
+                            <small class="ml-3 mr-auto">
                                 <a href="{% url 'edit_product' merch.id %}">Edit</a>
-                                <a class="text-danger" href="{% url 'delete_product' merch.id %}">Delete</a>
+                                <!-- #javascript enabled Y/N all_merch.html -->
+                                <a href="{% url 'delete_product' merch.id %}"
+                                    class="confirm-delete text-danger">Delete</a>
                             </small>
                             {% endif %}
                         </div>
@@ -44,4 +46,24 @@
         </div>
     </div>
 </main>
+{% endblock %}
+
+{% block postloadjs %}
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        // Wait for the DOM to be fully loaded before attaching the click event handler
+        var deleteLinks = document.querySelectorAll('.confirm-delete');
+
+        deleteLinks.forEach(function (link) {
+            link.addEventListener('click', function (e) {
+                e.preventDefault();
+                var shouldDelete = confirm('Are you sure you want to delete this?');
+
+                if (shouldDelete) {
+                    window.location.href = link.getAttribute('href');
+                }
+            });
+        });
+    });
+</script>
 {% endblock %}
