--- a/merchandise/templates/merchandise/merch_item.html
+++ b/merchandise/templates/merchandise/merch_item.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 {% load static %}
 
 
@@ -43,24 +43,31 @@
                             </select>
                         </div>
                         {% endif %}
+                        {% if request.user.is_superuser %}
+
+                        <small class="ml-3 mr-auto">
+                            <a href="{% url 'edit_product' merch_item.id %}">Edit</a>
+                            <!-- #javascript enabled Y/N  -->
+                            <a href="{% url 'delete_product' merch_item.id %}"
+                                class="confirm-delete text-danger">Delete</a>
+                        </small>
+                        {% endif %}
                         <div class="col-12">
                             <p class="mt-3 card-title"><strong>Quantity:</strong></p>
                             <div class="form-group w-50">
                                 <div class="input-group">
-                                        <!-- prepend (-)-->
+                                    <!-- prepend (-)-->
                                     <div class="input-group-prepend">
-                                        <button class="decrement-qty btn btn-black rounded-0" 
+                                        <button class="decrement-qty btn btn-black rounded-0"
                                             data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
                                             <span class="icon">
                                                 <i class="fas fa-minus"></i>
                                             </span>
                                         </button>
                                     </div>
-                                        <!-- input -->
-                                    <input class="form-control qty_input" type="number"
-                                        name="quantity" value="1" min="1" max="99"
-                                        data-item_id="{{ product.id }}"
-                                        id="id_qty_{{ product.id }}">
+                                    <!-- input -->
+                                    <input class="form-control qty_input" type="number" name="quantity" value="1"
+                                        min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
                                     <div class="input-group-append">
                                         <!-- append (+)-->
                                         <button class="increment-qty btn btn-black rounded-0"
@@ -92,4 +99,22 @@
 
 </main>
 {% endblock %}
+{% block postloadjs %}
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        // Wait for the DOM to be fully loaded before attaching the click event handler
+        var deleteLinks = document.querySelectorAll('.confirm-delete');
 
+        deleteLinks.forEach(function (link) {
+            link.addEventListener('click', function (e) {
+                e.preventDefault();
+                var shouldDelete = confirm('Are you sure you want to delete this?');
+
+                if (shouldDelete) {
+                    window.location.href = link.getAttribute('href');
+                }
+            });
+        });
+    });
+</script>
+{% endblock %}
