--- a/musicapp/templates/comments/add_comment.html
+++ b/musicapp/templates/comments/add_comment.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %}
 
-
 {% block content %}
-<h1>Add a comment</h1>
+<h1>Add Comment to Song</h1>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
