--- a/musicapp/templates/comments/all_songs_comments.html
+++ b/musicapp/templates/comments/all_songs_comments.html
@@ -2,19 +2,25 @@
 
 {% block content %}
 <div class="container">
-    <h2>All Songs with Comments</h2>
+    <h2 class="mb-4">All Songs with Comments</h2>
     {% for song in songs %}
-    <h2>{{ song.artist_name }} - {{ song.song_title }}</h2>
- 
-    <img class="image-url-comment"src="{{ song.song_image.url }}" alt="{{ song.song_title }}">
-    <ul>
-        {% for comment in comments %}
-        {% if comment.music == song %}
-        <li>{{ comment.text }} - {{ comment.user_profile.user.username }}</li>
-        {% endif %}
-        {% endfor %}
-    </ul>
-    <a href="{% url 'add_comment_to_song' pk=song.pk %}">Add Comment</a>
+    <div class="card mb-4">
+        <div class="card-body bg-dark text-light">
+            <h2 class="card-title">{{ song.artist_name }} - {{ song.song_title }}</h2>
+            <!-- <img class="img-fluid image-url-comment" src="{{ song.song_image.url }}" alt="{{ song.song_title }}"> -->
+            <ul class="list-group">
+                {% for comment in comments %}
+                {% if comment.music == song %}
+                <li class="list-group-item bg-dark text-light d-flex justify-content-between align-items-center">
+                    <span>{{ comment.text }} - {{ comment.user_profile.user.username }}</span>
+                    <a href="{% url 'edit_comment' pk=comment.pk %}" class="btn btn-primary btn-sm">Edit</a>
+                </li>
+                {% endif %}
+                {% endfor %}
+            </ul>
+            <a href="{% url 'add_comment_to_song' pk=song.pk %}" class="btn btn-primary mt-3">Add Comment</a>
+        </div>
+    </div>
     {% endfor %}
 </div>
 {% endblock %}
