--- a/templates/base.html
+++ b/templates/base.html
@@ -131,9 +131,12 @@
                 </button>
 
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav mx-auto">
+                    <ul class="navbar-nav mx-auto"> song_all_comments
                         <li class="nav-item second-navbar-li">
                             <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
+                        </li>
+                        <li class="nav-item second-navbar-li">
+                            <a class="nav-link" aria-current="page" href="{% url 'song_all_comments' %}">Comments</a>
                         </li>
                         <li class="nav-item second-navbar-li">
                             <a class="nav-link" aria-current="page" href="{% url 'song_list' %}">Anthology</a>
