--- a/musicapp/templates/comments/all_songs_comments-bak.html
+++ b/musicapp/templates/comments/all_songs_comments-bak.html
@@ -14,7 +14,7 @@
                     <span>{{ comment.text }} - {{ comment.user_profile.user.username }}</span>
                     <div>
                         <a href="{% url 'edit_comment' pk=comment.pk %}" class="btn btn-primary btn-sm">Edit</a>
-                        <form action="{% url 'comment_delete' comment.pk %}" method="post" class="d-inline">
+                        <form action="{% url 'delete_comment' pk=comment.pk %}" method="post" class="d-inline">
                             {% csrf_token %}
                             <input type="hidden" name="next" value="{{ request.path }}">
                             <button type="submit" class="btn btn-danger btn-sm">Delete</button>
